--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "elm-tooling": "^1.3.0",
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "localtunnel": "^2.0.1"
   }
 }
